fixing nabber alignment

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -11,6 +11,24 @@
             background-image: none;
         }
     }
+
+    .navbar {
+        .nav {
+            > li {
+              &:first-child {
+                > a {
+                    padding-left: 0;
+                }
+              }
+
+              &:last-child {
+                > a {
+                    padding-right: 0;
+                }
+              }
+            }
+        }
+    }
 }
 
 @media (min-width: 1200px) {
